MarketPlaceProvider: Solved images that has spaces on the name. Fixes issue 161